<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context=".SelectTimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/companySelectTimeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:foregroundGravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/routeNumberSelectTimeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:foregroundGravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/routeDirectionSelectTimeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:foregroundGravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/busStopTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/etaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:backgroundTint="#8BC34A"
        android:text="@string/refresh"
        android:textColor="#004D40" />

    <TextView
        android:id="@+id/saveDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/save_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/leftRadioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/sundayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/mondayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/tuesdayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/wednesdayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rightRadioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/thursdayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/fridayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/saturdayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:ems="10"
        android:inputType="time" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:backgroundTint="#8BC34A"
        android:text="@string/save"
        android:textColor="#004D40" />

</LinearLayout>