<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2303A9F4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fontFamily="monospace"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/routeEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/prompt_route_num"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:textColorHint="#616161" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:backgroundTint="#8BC34A"
        android:text="@string/search"
        android:textColor="#004D40" />

    <TextView
        android:id="@+id/selectCompanyTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@+id/companyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/outboundTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/outboundButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/select_out"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inboundTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/inboundButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/select_in"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>